[gd_scene load_steps=63 format=3 uid="uid://b14dvx67drebc"]

[ext_resource type="Script" uid="uid://de3rlx01ibq3d" path="res://entities/player/player.gd" id="1_1im8n"]
[ext_resource type="PackedScene" uid="uid://wwjxod2at3t3" path="res://entities/player/Camera.tscn" id="2_nkqiv"]
[ext_resource type="Shader" uid="uid://ja0tditl2iqa" path="res://entities/player/player.gdshader" id="4_0t1y4"]
[ext_resource type="Script" uid="uid://dgegklgqwvpxa" path="res://lib/script/char_texture.gd" id="4_oihyf"]
[ext_resource type="Shader" uid="uid://bm0iowttrwa5h" path="res://misc/shaders/sparkle.gdshader" id="6_m6phi"]
[ext_resource type="PackedScene" uid="uid://c7h6twa0ran3j" path="res://fx/PlayerHurt.tscn" id="6_q57vx"]
[ext_resource type="Shader" uid="uid://r67815wpvbai" path="res://misc/shaders/funds.gdshader" id="6_rpfb3"]
[ext_resource type="Shader" uid="uid://cjhdxgx78hiya" path="res://misc/shaders/dash_ghost.gdshader" id="8_m6phi"]
[ext_resource type="Shader" uid="uid://cvs7hsg1qidb4" path="res://misc/shaders/ray_sparkle.gdshader" id="9_q57vx"]
[ext_resource type="Shader" uid="uid://csess5xqvneiu" path="res://misc/shaders/sphere_particle.gdshader" id="10_ak4un"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7lms1"]
shader = ExtResource("4_0t1y4")

[sub_resource type="Image" id="Image_ak4un"]
data = {
"data": PackedByteArray(255, 255, 255, 255),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id="ImageTexture_mqro2"]
image = SubResource("Image_ak4un")
script = ExtResource("4_oihyf")
metadata/_custom_type_script = "uid://dgegklgqwvpxa"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oihyf"]
shader = ExtResource("6_m6phi")

[sub_resource type="Gradient" id="Gradient_oihyf"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.470588)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7lms1"]
gradient = SubResource("Gradient_oihyf")

[sub_resource type="Curve" id="Curve_m6phi"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 2), 3.7242, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_oihyf"]
curve = SubResource("Curve_m6phi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7lms1"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 10, 10)
angle_min = 1.07288e-05
angle_max = 90.0
radial_velocity_min = -5.00002
radial_velocity_max = 0.999978
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 15.0
scale_curve = SubResource("CurveTexture_oihyf")
color_initial_ramp = SubResource("GradientTexture1D_7lms1")

[sub_resource type="Animation" id="Animation_m6phi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_miirx"]
resource_name = "get_funds"
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.92, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 35), Vector2(0, 30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.92, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.25)]
}

[sub_resource type="Animation" id="Animation_oihyf"]
resource_name = "get_funds_simple"
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ufbvs"]
resource_name = "hide_funds"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 30), Vector2(0, 35)]
}

[sub_resource type="Animation" id="Animation_7lms1"]
resource_name = "show_funds"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 35), Vector2(0, 30)]
}

[sub_resource type="Animation" id="Animation_mqro2"]
resource_name = "show_funds_simple"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oihyf"]
_data = {
&"RESET": SubResource("Animation_m6phi"),
&"get_funds": SubResource("Animation_miirx"),
&"get_funds_simple": SubResource("Animation_oihyf"),
&"hide_funds": SubResource("Animation_ufbvs"),
&"show_funds": SubResource("Animation_7lms1"),
&"show_funds_simple": SubResource("Animation_mqro2")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_miirx"]
shader = ExtResource("6_rpfb3")

[sub_resource type="Gradient" id="Gradient_m6phi"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oihyf"]
gradient = SubResource("Gradient_m6phi")
width = 8
height = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ufbvs"]
shader = ExtResource("8_m6phi")

[sub_resource type="Curve" id="Curve_mqro2"]
_data = [Vector2(0, 1), 0.0, -3.0817, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0q6kc"]
curve = SubResource("Curve_mqro2")

[sub_resource type="Curve" id="Curve_bpxo2"]
_data = [Vector2(0, 0.125), 0.0, 5.66621, 0, 0, Vector2(0.42, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_16csq"]
curve = SubResource("Curve_bpxo2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bb7xv"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 160.0
scale_max = 160.0
scale_curve = SubResource("CurveTexture_16csq")
alpha_curve = SubResource("CurveTexture_0q6kc")

[sub_resource type="Curve" id="Curve_oihyf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.28466, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7lms1"]
curve = SubResource("Curve_oihyf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ufbvs"]
particle_flag_disable_z = true
angle_min = 45.0
angle_max = 45.0
spread = 180.0
initial_velocity_min = 300.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
damping_min = 300.0
damping_max = 500.0
scale_min = 2.0
scale_max = 8.0
alpha_curve = SubResource("CurveTexture_7lms1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q57vx"]
shader = ExtResource("8_m6phi")

[sub_resource type="Curve" id="Curve_ak4un"]
_data = [Vector2(0, 1), 0.0, -2.93837, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yqces"]
curve = SubResource("Curve_ak4un")

[sub_resource type="Curve" id="Curve_1ms0h"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.51171, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bi3n6"]
curve = SubResource("Curve_1ms0h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2rv2u"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 20.0
scale_max = 20.0
scale_curve = SubResource("CurveTexture_bi3n6")
alpha_curve = SubResource("CurveTexture_yqces")

[sub_resource type="Curve" id="Curve_mq27t"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cmitb"]
curve = SubResource("Curve_mq27t")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kwk8g"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(0, 10, 0)
angle_min = 45.0
angle_max = 45.0
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
damping_min = 5.0
damping_max = 15.0
scale_max = 3.0
alpha_curve = SubResource("CurveTexture_cmitb")

[sub_resource type="Curve" id="Curve_2a181"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t7qaw"]
curve = SubResource("Curve_2a181")

[sub_resource type="Curve" id="Curve_aubru"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.14286, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_heyqt"]
curve = SubResource("Curve_aubru")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ax5yc"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 5.0
emission_ring_inner_radius = 3.0
emission_ring_cone_angle = 90.0
angle_min = 45.0
angle_max = 45.0
radial_velocity_min = 30.0
radial_velocity_max = 70.0
radial_velocity_curve = SubResource("CurveTexture_heyqt")
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 1.25
alpha_curve = SubResource("CurveTexture_t7qaw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ak4un"]
shader = ExtResource("9_q57vx")

[sub_resource type="Curve" id="Curve_q57vx"]
_data = [Vector2(0, 1), 0.0, -1.568352, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ak4un"]
curve = SubResource("Curve_q57vx")

[sub_resource type="Curve" id="Curve_2rv2u"]
_data = [Vector2(0, 1), 0.0, -1.442881, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mq27t"]
curve = SubResource("Curve_2rv2u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2a181"]
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 90.000015
gravity = Vector3(0, 0, 0)
scale_min = 180.0
scale_max = 180.0
scale_curve = SubResource("CurveTexture_mq27t")
alpha_curve = SubResource("CurveTexture_ak4un")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ms0h"]
shader = ExtResource("10_ak4un")

[sub_resource type="Curve" id="Curve_kwk8g"]
_data = [Vector2(0, 1), 0.0, -1.7582041, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2a181"]
curve = SubResource("Curve_kwk8g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aubru"]
particle_flag_disable_z = true
angle_min = 45.00001
angle_max = 45.00001
spread = 180.0
initial_velocity_max = 400.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 8.0
alpha_curve = SubResource("CurveTexture_2a181")

[node name="Player" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 5
motion_mode = 1
script = ExtResource("1_1im8n")
invulnerability_time = 1.0

[node name="Camera" parent="." instance=ExtResource("2_nkqiv")]

[node name="Render" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7lms1")
scale = Vector2(20, 20)
texture = SubResource("ImageTexture_mqro2")

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -10, 10, 0, 0, 10, -10, 0)

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HurtEffect" parent="." instance=ExtResource("6_q57vx")]

[node name="FundsEffect" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_oihyf")
emitting = false
amount = 3
lifetime = 0.1
one_shot = true
process_material = SubResource("ParticleProcessMaterial_7lms1")

[node name="FundsDisplay" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 30)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FundsDisplay"]
libraries = {
&"": SubResource("AnimationLibrary_oihyf")
}

[node name="HBoxContainer" type="HBoxContainer" parent="FundsDisplay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -5.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="FundsDisplay/HBoxContainer"]
material = SubResource("ShaderMaterial_miirx")
layout_mode = 2
texture = SubResource("GradientTexture2D_oihyf")
stretch_mode = 3

[node name="Label" type="Label" parent="FundsDisplay/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 9
text = "0"

[node name="Ring" type="GPUParticles2D" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_ufbvs")
emitting = false
amount = 1
lifetime = 4.0
one_shot = true
process_material = SubResource("ParticleProcessMaterial_bb7xv")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
process_mode = 3
emitting = false
amount = 256
process_material = SubResource("ParticleProcessMaterial_ufbvs")

[node name="Afterimage" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_q57vx")
emitting = false
amount = 30
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_2rv2u")

[node name="Dashline" type="GPUParticles2D" parent="."]
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_kwk8g")

[node name="DashRestore" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ax5yc")

[node name="RedirectFlash" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_ak4un")
instance_shader_parameters/rays = 4
emitting = false
amount = 5
lifetime = 0.25
one_shot = true
process_material = SubResource("ParticleProcessMaterial_2a181")

[node name="RedirectBurst" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_1ms0h")
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
trail_enabled = true
trail_lifetime = 0.1
trail_sections = 4
process_material = SubResource("ParticleProcessMaterial_aubru")

[node name="DashArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DashArea"]
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(1.25, 1.25)
polygon = PackedVector2Array(0, -10, 10, 0, 0, 10, -10, 0)

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="Evasion" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="ShootCooldown" to="." method="prepare_bullet"]
[connection signal="body_entered" from="DashArea" to="." method="_on_dash_hit"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_end"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
